--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ info.app.description=${project.version}
 info.app.version=${project.version}
 
 
-#server.port=8080
+server.port=18080
 #server.servlet-path=/
 server.tomcat.access-log-enabled=true
 server.tomcat.access-log-pattern=%h %l %u %t "%r" %s %b %D
@@ -17,10 +17,10 @@ server.tomcat.basedir=/data/logs/
 
 # REDIS (RedisProperties)
 #spring.redis.database= # database name
-spring.redis.host=127.0.0.1
+spring.redis.host=crowd.redis.youja.cn
 #spring.redis.password= # server password
-spring.redis.port=6379
-spring.redis.pool.max-idle=8 # pool settings ...
-spring.redis.pool.min-idle=0
+spring.redis.port=6015
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=1
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=-1
